# sqlite3-cmake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  sqlite3.h
